[build-system]
requires = [
	"hatchling~=1.28.0",
]
build-backend = "hatchling.build"

[project]
# Only use lowercase letters and hyphens here
# @see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#name
# @see https://packaging.python.org/en/latest/specifications/name-normalization/
name = "tronclass-cli"
# PEP 440
# @see https://sethmlarson.dev/pep-440
version = "0.2.8.dev0"
dependencies = [
	"beautifulsoup4~=4.9.3",
	"keyring~=22.0.1",
	"lxml==5.3.0",
	"python-dateutil~=2.8.1",
	"pyyaml~=5.3.1",
	"requests[security]~=2.25.1",
	"requests-toolbelt~=0.9.1",
	"rsa~=4.7.1",
	"tabulate[widechars]~=0.8.9",
	"tqdm~=4.57.0",
]
requires-python = ">=3.6, <3.14"
# Use Git committer/author name here
authors = [
	{ name = "GGQQmax" },
	{ name = "Zhou Haoyang", email="howyoungzhou@yahoo.com" },
]
description = "Command-line interface for Tronclass."
readme.file = "README.md"
readme.content-type = "text/markdown"
license = "MIT"
license-files = [
	"LICENSE",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: Information Technology",
	"Natural Language :: Chinese (Simplified)",
	"Natural Language :: Chinese (Traditional)",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
urls.repository = "https://github.com/zhou-haoyang/tronclass-cli.git"
urls.issues = "https://github.com/zhou-haoyang/tronclass-cli/issues"
scripts.tcc = "tronclass_cli.__main__:main"
